# Airflow

./: exemplo_00.py  exemplo_01.py  exemplo_04.py  pyproject.toml
dags/: minha_dag.py  minha_dag_2.py  minha_dag_3.py  minha_dag_4.py
frontend/: exemplo_04.py
frontend/pipeline/: pipeline.py
