[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["Mateus Kasuya <mateusvbkasuya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
apache-airflow = "^2.10.0"
loguru = "^0.7.2"
streamlit = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
